tests/models/enum/unnamed/f32/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        f32
    ),
}
fn main() {}
